--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
 body {
   font-family: sans-serif;
   color: #eee;
-  background-color: #5b5b5b;
+  background-color: #222;
   /* background-color: #60b347; */
 }
 
